Validator types.